--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -16,7 +16,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="../bootstrap-3.3.5/js/bootstrap.min.js"></script>
+    <script src="../static/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.8.0/holder.min.js"></script>
