--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -20,12 +20,12 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="/">Home</a></li>
                 <li class="active"><a href="guitarraelectrica.html">Guitarra Electrica</a></li>
                 <li class="active"><a href="guitarraclasicaocriolla.html">Guitarra Clasica o Criolla</a></li>
                 <li class="active"><a href="guitarraacustica.html">Guitarra Acustica</a></li>
-                <li><a href="#about">Sobre Mi</a></li>
-                <li><a href="#contact">Contacto</a></li>
+                <li><a href="about">Sobre Mi</a></li>
+                <li><a href="contact">Contacto</a></li>
 
                   </ul>
                 </li>
