--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -8,14 +8,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Sobre mí</h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-        </div>
-      </div>
-          <p class="lead">
-          Hola. Mi nombre es Agustín Enriquez y soy principalmente un apasionado de la música.
+          <p class="lead">Hola. Mi nombre es Agustín Enriquez y soy principalmente un apasionado de la música.
          Además soy estudiante avanzado en el conservatorio Manuel de Falla y
          docente de particular de guitarra y bajo. Además fui por muchos años alumno particular
          de muchos docentes, así que conozco del tema y creo que podemos encontrarle la vuelta para
@@ -24,8 +17,16 @@
          Vivo por Villa del parque/Paternal, pero también doy clases en Caballito/Flores. Ah!
          Y también a domicilio.</p>
         </div>
+    </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <p class="lead">Hola. Mi nombre es Agustín Enriquez y soy principalmente un apasionado de la música.
+         Además soy estudiante avanzado en el conservatorio Manuel de Falla y
+         docente de particular de guitarra y bajo. Además fui por muchos años alumno particular
+         de muchos docentes, así que conozco del tema y creo que podemos encontrarle la vuelta para
+         sacar lo mejor de vos.
+
+         Vivo por Villa del parque/Paternal, pero también doy clases en Caballito/Flores. Ah!
+         Y también a domicilio.</p>
         </div>
       </div>
 
