--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -3,35 +3,18 @@
 {% block navigation %}
 <!-- NAVBAR
 ================================================== -->
-  <body>
-    <div class="navbar-wrapper">
+ 
+    <div class="blog-masthead">
       <div class="container">
-
-        <nav class="navbar navbar-inverse navbar-static-top">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">Agustin Enriquez - Profesor de Guitarra</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="/index">Home</a></li>
-                <li class="active"><a href="/guitarraelectrica">Guitarra Electrica</a></li>
-                <li class="active"><a href="/guitarraclasicaocriolla">Guitarra Clasica o Criolla</a></li>
-                <li class="active"><a href="/guitarraacustica">Guitarra Acustica</a></li>
-                <li><a href="/about">Sobre Mi</a></li>
-                <li><a href="/contact">Contacto</a></li>
-              </ul>
-            </div>
-          </div>
+        <nav class="blog-nav">
+          <a class="blog-nav-item active" href="#">Home</a>
+          <a class="blog-nav-item" href="#">New features</a>
+          <a class="blog-nav-item" href="#">Press</a>
+          <a class="blog-nav-item" href="#">New hires</a>
+          <a class="blog-nav-item" href="#">About</a>
         </nav>
-
       </div>
     </div>
+
 
 {% endblock %}
